--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Sakai Vue</title>
       <link id="theme-css" rel="stylesheet" type="text/css" href="/themes/lara-light-indigo/theme.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-T9QV9VsyjXMDzOu7GgCkltgpGw/2Hi0Vz5muRtmaGp3e5w4GrMviu8wLMA9S6Ddh" crossorigin="anonymous">
 </head>
 
 <body>
